content/bases/wallabag/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wallabag
  labels:
    app.kubernetes.io/name: wallabag
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: wallabag
  template:
    metadata:
      labels:
        app.kubernetes.io/name: wallabag
    spec:
      containers:
      - name: wallabag
        image: wallabag/wallabag
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
        env: []
        resources:
          limits:
            cpu: 2000m
            memory: 512Mi
          requests:
            cpu: 100m
            memory: 64Mi
