content/bases/wallabag/service.yaml
# https://github.com/stefanprodan/podinfo/blob/4.0.6/kustomize/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: wallabag
  labels:
    app.kubernetes.io/name: wallabag
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: wallabag
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
