content/bases/wallabag/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: wallabag
  labels:
    app.kubernetes.io/name: wallabag
spec:
  rules:
    - host: wallabag.ldaws.net
      http:
        paths:
          - backend:
              serviceName: wallabag
              servicePort: http
